--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,13 +1,55 @@
-body {
-  background: #f9fafb;
-  color: #272727;
-  font-size: 14px;
+* {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
   font-family: Arial, Helvetica, sans-serif !important;
 }
+body {
+  background: #f9fafb;
+  color: #272727;
+}
 
 p {
   margin: 0;
+}
+
+.pd-30 {
+  padding: 30px;
+}
+
+.pd-10 {
+  padding: 10px;
+}
+
+.pd-15 {
+  padding: 15px;
+}
+
+.pd-20 {
+  padding: 20px;
+}
+
+.pd-8y {
+  padding: 8px 0;
+}
+
+.pd-16x {
+  padding-right: 16px;
+  padding-left: 16px;
+}
+
+.pd-16y.pd-8x {
+  padding: 16px 8px;
+}
+
+.mr-24b {
+  margin-bottom: 24px;
+}
+
+.mr-16b {
+  margin-bottom: 16px;
+}
+
+.mr-8b {
+  margin-bottom: 8px;
 }
