--- a/client/src/components/GridLayout/GridFlexBox/Grid.css
+++ b/client/src/components/GridLayout/GridFlexBox/Grid.css
@@ -39,56 +39,46 @@
 }
 
 /**/
+.flex-col-xs-1 {
+  width: calc(100% * (1 / 12));
+}
+.flex-col-xs-2 {
+  width: calc(100% * (2 / 12));
+}
+.flex-col-xs-3 {
+  width: calc(100% * (3 / 12));
+}
+.flex-col-xs-4 {
+  width: calc(100% * (4 / 12));
+}
+.flex-col-xs-5 {
+  width: calc(100% * (5 / 12));
+}
+.flex-col-xs-6 {
+  width: calc(100% * (6 / 12));
+}
+.flex-col-xs-7 {
+  width: calc(100% * (7 / 12));
+}
+.flex-col-xs-8 {
+  width: calc(100% * (8 / 12));
+}
+.flex-col-xs-9 {
+  width: calc(100% * (9 / 12));
+}
+.flex-col-xs-10 {
+  width: calc(100% * (10 / 12));
+}
+.flex-col-xs-11 {
+  width: calc(100% * (11 / 12));
+}
+.flex-col-xs-12 {
+  width: calc(100% * (12 / 12));
+}
 
 @media (min-width: 540px) {
   .flex-container {
     max-width: 540px;
-  }
-  .flex-col-xs-1 {
-    width: calc(100% * (1 / 12));
-  }
-  .flex-col-xs-2 {
-    width: calc(100% * (2 / 12));
-  }
-  .flex-col-xs-3 {
-    width: calc(100% * (3 / 12));
-  }
-  .flex-col-xs-4 {
-    width: calc(100% * (4 / 12));
-  }
-  .flex-col-xs-5 {
-    width: calc(100% * (5 / 12));
-  }
-  .flex-col-xs-6 {
-    width: calc(100% * (6 / 12));
-  }
-  .flex-col-xs-7 {
-    width: calc(100% * (7 / 12));
-  }
-  .flex-col-xs-8 {
-    width: calc(100% * (8 / 12));
-  }
-  .flex-col-xs-9 {
-    width: calc(100% * (9 / 12));
-  }
-  .flex-col-xs-10 {
-    width: calc(100% * (10 / 12));
-  }
-  .flex-col-xs-11 {
-    width: calc(100% * (11 / 12));
-  }
-  .flex-col-xs-12 {
-    width: calc(100% * (12 / 12));
-  }
-  .flex-col {
-    flex-grow: 1;
-    flex-shrink: 1;
-    width: 40%;
-  }
-}
-@media (min-width: 768px) {
-  .flex-container {
-    max-width: 768px;
   }
   .flex-col-sm-1 {
     width: calc(100% * (1 / 12));
@@ -129,12 +119,12 @@
   .flex-col {
     flex-grow: 1;
     flex-shrink: 1;
-    width: 25%;
+    width: 40%;
   }
 }
-@media (min-width: 992px) {
+@media (min-width: 768px) {
   .flex-container {
-    max-width: 992px;
+    max-width: 768px;
   }
   .flex-col-md-1 {
     width: calc(100% * (1 / 12));
@@ -175,12 +165,12 @@
   .flex-col {
     flex-grow: 1;
     flex-shrink: 1;
-    width: 20%;
+    width: 25%;
   }
 }
-@media (min-width: 1200px) {
+@media (min-width: 992px) {
   .flex-container {
-    max-width: 1200px;
+    max-width: 992px;
   }
   .flex-col-lg-1 {
     width: calc(100% * (1 / 12));
@@ -216,6 +206,52 @@
     width: calc(100% * (11 / 12));
   }
   .flex-col-lg-12 {
+    width: calc(100% * (12 / 12));
+  }
+  .flex-col {
+    flex-grow: 1;
+    flex-shrink: 1;
+    width: 20%;
+  }
+}
+@media (min-width: 1200px) {
+  .flex-container {
+    max-width: 1200px;
+  }
+  .flex-col-xl-1 {
+    width: calc(100% * (1 / 12));
+  }
+  .flex-col-xl-2 {
+    width: calc(100% * (2 / 12));
+  }
+  .flex-col-xl-3 {
+    width: calc(100% * (3 / 12));
+  }
+  .flex-col-xl-4 {
+    width: calc(100% * (4 / 12));
+  }
+  .flex-col-xl-5 {
+    width: calc(100% * (5 / 12));
+  }
+  .flex-col-xl-6 {
+    width: calc(100% * (6 / 12));
+  }
+  .flex-col-xl-7 {
+    width: calc(100% * (7 / 12));
+  }
+  .flex-col-xl-8 {
+    width: calc(100% * (8 / 12));
+  }
+  .flex-col-xl-9 {
+    width: calc(100% * (9 / 12));
+  }
+  .flex-col-xl-10 {
+    width: calc(100% * (10 / 12));
+  }
+  .flex-col-xl-11 {
+    width: calc(100% * (11 / 12));
+  }
+  .flex-col-xl-12 {
     width: calc(100% * (12 / 12));
   }
   .flex-col {
