--- a/client/src/components/Alert/Alert.css
+++ b/client/src/components/Alert/Alert.css
@@ -4,12 +4,13 @@
   text-align: left;
   padding: 20px 20px 20px 30px;
   position: relative;
-  z-index: -1;
+  z-index: 1;
 }
 
 .success {
   background-color: #98f5e1;
-  color: #319795;
+  /* color: #319795; */
+  color: #236c5b;
 }
 
 /*close*/
@@ -19,4 +20,22 @@
   position: absolute;
   top: 0;
   right: 15px;
+  cursor: pointer;
+}
+
+.warning {
+  background-color: #ffe6d3;
+  color: #ff892f;
+}
+.error {
+  background-color: #fad2e1;
+  color: #7c193d;
+}
+.info {
+  background-color: #ededed;
+  color: #5d5d5d;
+}
+.dark {
+  background-color: #000;
+  color: #fff;
 }
